@@ -1,5 +1,8 @@
 0.19.16	UNRELEASED
 
+ * Don't send "deepen None" to server if graph walker
+   supports shallow. (Jelmer Vernooĳ, #747)
+
 0.19.15	2020-01-26
 
  * Properly handle files that are just executable for the
